# Api_HotelGemine

./: .env.example  .gitignore  README.md  pyproject.toml
api/: main.py  run_api.py
api/data/: hotel_faq.json  popular_db.py
api/services/: db_service.py  gemini_ai.py
api/shared/: config.py
